--- a/balance.htm
+++ b/balance.htm
@@ -41,13 +41,13 @@ aria-expanded="false" aria-label="Toggle navigation">
 <!-- csak a balance-on -->
 <ul class="navbar-nav mt-2 mt-md-0">
 <li class="nav-profit vesztes"> Február:
-<span class="dollar">$-80.90 (-16.5%)</span>
+<span class="dollar">$-85.57 (-17.5%)</span>
 </li>
 <li class="nav-profit vesztes">9. hét:
-<span class="dollar">$-28.65 (-6.1%)</span>
+<span class="dollar">$-33.32 (-7.1%)</span>
 </li>
 <li class="nav-profit vesztes">28. Szerda:
-<span class="dollar">$-0.02 (-0.0%)</span>
+<span class="dollar">$-4.69 (-1.1%)</span>
 </li>
 </ul>
 <!-- /csak a balance-on -->
@@ -77,12 +77,12 @@ datasets: [{
 label: "equity",
 backgroundColor: 'rgba(255, 99, 133, 0.5)',
 borderColor: 'rgb(255, 99, 132)',
-data: [0, 500.00, 490.37, 499.18, 500.82, 502.15, 504.95, 506.06, 494.94, 478.26, 473.02, 447.75, 437.75, 419.12, 419.10],
+data: [0, 500.00, 490.37, 499.18, 500.82, 502.15, 504.95, 506.06, 494.94, 478.26, 473.02, 447.75, 437.75, 419.12, 414.43],
 }, {
 label: "balance",
 backgroundColor: 'rgba(255, 99, 133, 0.5)',
 borderColor: 'rgb(255, 99, 132)',
-data: [0, 500.00, 490.37, 499.18, 500.82, 502.15, 504.95, 506.06, 494.94, 478.26, 473.02, 447.75, 437.75, 419.12, 419.10],
+data: [0, 500.00, 490.37, 499.18, 500.82, 502.15, 504.95, 506.06, 494.94, 478.26, 473.02, 447.75, 437.75, 419.12, 414.43],
 }]
 },
 // Configuration options go here
@@ -116,12 +116,12 @@ var chart = new Chart(ctx, {
 type: 'line',
 // The data for our dataset
 data: {
-labels: ["0","2018.02.08 23:39", "2018.02.09 14:17", "2018.02.09 14:47", "2018.02.09 19:14", "2018.02.09 21:03", "2018.02.13 11:32", "2018.02.15 09:19", "2018.02.16 07:18", "2018.02.16 10:04", "2018.02.16 10:18", "2018.02.16 10:18", "2018.02.16 12:29", "2018.02.16 12:29", "2018.02.16 12:37", "2018.02.16 12:39", "2018.02.19 19:11", "2018.02.20 11:17", "2018.02.20 11:41", "2018.02.20 12:16", "2018.02.20 20:26", "2018.02.20 20:30", "2018.02.20 21:12", "2018.02.20 21:12", "2018.02.21 12:04", "2018.02.21 16:26", "2018.02.21 16:26", "2018.02.21 17:45", "2018.02.21 22:00", "2018.02.21 22:00", "2018.02.22 11:01", "2018.02.22 11:16", "2018.02.22 11:16", "2018.02.22 12:23", "2018.02.22 12:23", "2018.02.23 10:01", "2018.02.23 10:01", "2018.02.23 12:08", "2018.02.23 15:20", "2018.02.23 15:35", "2018.02.23 15:35", "2018.02.26 02:56", "2018.02.26 10:10", "2018.02.26 10:54", "2018.02.26 10:54", "2018.02.27 03:45", "2018.02.27 09:24", "2018.02.27 10:11", "2018.02.27 11:08", "2018.02.27 17:53", "2018.02.28 03:18", "2018.02.28 03:34", "2018.02.28 05:08"],
+labels: ["0","2018.02.08 23:39", "2018.02.09 14:17", "2018.02.09 14:47", "2018.02.09 19:14", "2018.02.09 21:03", "2018.02.13 11:32", "2018.02.15 09:19", "2018.02.16 07:18", "2018.02.16 10:04", "2018.02.16 10:18", "2018.02.16 10:18", "2018.02.16 12:29", "2018.02.16 12:29", "2018.02.16 12:37", "2018.02.16 12:39", "2018.02.19 19:11", "2018.02.20 11:17", "2018.02.20 11:41", "2018.02.20 12:16", "2018.02.20 20:26", "2018.02.20 20:30", "2018.02.20 21:12", "2018.02.20 21:12", "2018.02.21 12:04", "2018.02.21 16:26", "2018.02.21 16:26", "2018.02.21 17:45", "2018.02.21 22:00", "2018.02.21 22:00", "2018.02.22 11:01", "2018.02.22 11:16", "2018.02.22 11:16", "2018.02.22 12:23", "2018.02.22 12:23", "2018.02.23 10:01", "2018.02.23 10:01", "2018.02.23 12:08", "2018.02.23 15:20", "2018.02.23 15:35", "2018.02.23 15:35", "2018.02.26 02:56", "2018.02.26 10:10", "2018.02.26 10:54", "2018.02.26 10:54", "2018.02.27 03:45", "2018.02.27 09:24", "2018.02.27 10:11", "2018.02.27 11:08", "2018.02.27 17:53", "2018.02.28 03:18", "2018.02.28 03:34", "2018.02.28 05:08", "2018.02.28 18:12"],
 datasets: [{
 label: "Robot hozam",
 backgroundColor: 'rgba(255, 99, 133, 0.5)',
 borderColor: 'rgb(255, 99, 132)',
-data: [0, -9.63, -6.36, -3.95, 7.72, -0.82, 0.82, 2.15, 12.22, 8.95, 7.76, 5.20, 5.18, 5.13, 5.05, 4.95, 6.06, 6.34, 6.53, 3.51, 1.39, -0.80, -2.95, -5.06, -8.34, -15.30, -22.32, -21.72, -21.73, -21.74, -7.05, -10.12, -13.19, -19.95, -26.98, -30.21, -33.32, -33.34, -38.45, -45.32, -52.25, -56.85, -56.93, -59.59, -62.25, -62.83, -62.90, -70.23, -79.13, -80.88, -79.98, -80.01, -80.90],
+data: [0, -9.63, -6.36, -3.95, 7.72, -0.82, 0.82, 2.15, 12.22, 8.95, 7.76, 5.20, 5.18, 5.13, 5.05, 4.95, 6.06, 6.34, 6.53, 3.51, 1.39, -0.80, -2.95, -5.06, -8.34, -15.30, -22.32, -21.72, -21.73, -21.74, -7.05, -10.12, -13.19, -19.95, -26.98, -30.21, -33.32, -33.34, -38.45, -45.32, -52.25, -56.85, -56.93, -59.59, -62.25, -62.83, -62.90, -70.23, -79.13, -80.88, -79.98, -80.01, -80.90, -85.57],
 }]
 },
 // Configuration options go here
