--- a/NQ100/NQ100_H1_Batman.htm
+++ b/NQ100/NQ100_H1_Batman.htm
@@ -23,16 +23,422 @@ google.charts.setOnLoadCallback(drawHoursChart);
 google.charts.setOnLoadCallback(drawScatterChart);
 
 // ================================ /Load charts ================================
-      </script>
+ // ================================ Hozam chart ================================
+function drawHozamChart() {
+var data = google.visualization.arrayToDataTable([
+['Dátum', 'Hozam', 'Longs', 'Shorts'],
+['', 0, 0, 0]
+,
+['2018.04.12 16:45', 0.25, 0.25, 0.00],
+['2018.04.13 15:20', 2.43, 2.43, 0.00],
+['2018.04.17 07:57', 5.45, 5.45, 0.00],
+['2018.04.18 10:53', 0.14, 0.14, 0.00],
+['2018.04.19 16:36', -5.17, 0.14, -5.31],
+['2018.04.20 10:35', 0.16, 0.14, 0.02],
+['2018.04.24 17:24', -4.96, 0.14, -5.10],
+['2018.04.25 16:43', -10.07, 0.14, -10.21],
+['2018.04.26 15:59', -9.89, 0.32, -10.21],
+['2018.04.27 10:00', -15.20, -4.99, -10.21],
+['2018.05.01 11:58', -14.92, -4.99, -9.93],
+['2018.05.03 14:52', -12.17, -4.99, -7.18],
+['2018.05.04 17:09', -11.88, -4.70, -7.18],
+['2018.05.07 07:15', -17.58, -10.40, -7.18],
+['2018.05.08 13:56', -24.59, -10.40, -14.19]
+]);
+
+var options = {
+seriesType: 'bars',
+series: {
+1: {
+type: 'line'
+},
+2: {
+type: 'line'
+}
+},
+colors: ['#878787', '#0050b8', '#b80000'],
+dataOpacity: 0.5,
+bar: {groupWidth: "100%"},legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Hozam_chart'));
+chart.draw(data, options);
+}
+// ================================ /Hozam chart ================================
+ // ================================ Lots chart ================================
+function drawLotsChart() {
+var data = google.visualization.arrayToDataTable([
+['date', 'lots'],
+['', 0]
+,
+['', 1.40],
+['', 1.40],
+['', 1.30],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.40],
+['', 1.50],
+['', 1.50],
+['', 1.50],
+['', 1.50],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#31849B'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 28,
+top: 10,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Lots_chart'));
+chart.draw(data, options);
+}
+// ================================ /Lots chart ================================
+ // ================================ Days chart ================================
+function drawDaysChart() {
+var data = google.visualization.arrayToDataTable([
+['nap', 'profit'],['hétfő', -5.70],
+['kedd', -8.83],
+['szerda', -10.42],
+['csütörtök', -2.13],
+['péntek', 2.49],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#31849B'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('days-chart'));
+chart.draw(data, options);
+}
+// ================================ /Days chart ================================
+ // ================================ Hours chart ================================
+function drawHoursChart() {
+var data = google.visualization.arrayToDataTable([
+['óra', 'profit'],
+['0', 0],
+['1', 0.00],
+['2', 0.00],
+['3', 0.00],
+['4', 0.00],
+['5', 0.00],
+['6', 0.00],
+['7', -2.68],
+['8', 0.00],
+['9', -5.31],
+['10', 0.02],
+['11', 0.28],
+['12', 0.00],
+['13', -7.01],
+['14', 2.75],
+['15', 2.36],
+['16', -10.17],
+['17', -4.83],
+['18', 0.00],
+['19', 0.00],
+['20', 0.00],
+['21', 0.00],
+['22', 0.00],
+['23', 0.00],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#31849B'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('hours-chart'));
+chart.draw(data, options);
+}
+// ================================ /Hours chart ================================
+
+ // ================================ Scatter chart ================================
+function drawScatterChart() {
+var data = google.visualization.arrayToDataTable([
+['age', 'profit'],
+[0, 0.25],
+[0, 2.18],
+[0, 3.02],
+[0, -5.31],
+[0, -5.31],
+[0, 5.33],
+[0, -5.12],
+[0, -5.11],
+[0, 0.18],
+[0, -5.31],
+[0, 0.28],
+[0, 2.75],
+[0, 0.29],
+[0, -5.70],
+[0, -7.01],
+]);
+
+var options = {
+colors: ['#31849B'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 40,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ScatterChart(document.getElementById('scatter-chart'));
+
+chart.draw(data, options);
+}
+// ================================ /Scatter chart ================================
+ </script>
 </head>
 
 <body>
 
  <div class="symstrat-container">
-<div class="sym-navbar">
-<a class="sym-navitem sym-navlink symbol" class="1" href=" nq100.html">nq100</a>
-<a class="sym-navitem sym-navlink strategy" class="Batman" href="#">60 Batman</a>
-<a class="sym-navitem sym-navlink" href="../Mastrlist.html">Mesterlista</a>
+<div class="sym-navbar" style="background-color: #878787">
+<a class="sym-navitem symbol NQ100" href="NQ100.htm">NQ100</a>
+<a class="sym-navitem strategy Batman" href="#">H1 Batman</a>
+<a class="sym-navitem sym-navlink" href="../instruments.htm">Instrumentumok</a>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_TSQ.htm">H1_TSQ</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_St4.htm">H1_St4</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Classic.htm">H1_Classic</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Zoom.htm">H1_Zoom</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Batman.htm">H1_Batman</a>
+<a class="sym-navitem sym-navlink" href="NQ100_M15_ADX.htm">M15_ADX</a>
+</div>
+<div class="charts-container">
+<div class="stat-wrapper">
+<div class="stat-kat">Kor:</div>
+<div class="stat-val">0 nap</div>
+<div class="stat-kat">Trades:</div>
+<div class="stat-val">15 db</div>
+<div class="stat-kat">Profit total: $ </div>
+<div class="stat-val">-24.59</div>
+<div class="stat-kat">Profit%:</div>
+<div class="stat-val">-4.7531%</div>
+<div class="stat-kat">Profit factor:</div>
+<div class="stat-val">0.00</div>
+<div class="stat-kat">RR arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Találati arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Átlag nyerő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag vesztő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag trédhossz:</div>
+<div class="stat-val">0 óra</div>
+</div>
+<div class="side-charts">
+<div id="days-chart"></div>
+<div id="hours-chart"></div>
+<div id="scatter-chart"></div>
+</div>
+<div class="main-charts">
+<div id="Hozam_chart"></div>
+<div id="Lots_chart"></div>
+</div>
+
+</div><div class="symstrat-tabla">
+<div class="tabla-head" style="background-color: #878787">
+<div class="symstat-tabla-oszlop tabla-nr">Nr</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">tól -ig</div>
+<div class="symstat-tabla-oszlop tabla-hossz">tréd hossz</div>
+<div class="symstat-tabla-oszlop tabla-xit">kilépés</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">profit $</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">profit %</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes">megjegyzés</div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">0.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.12 16:45 - 2018.04.12 16:45</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.25</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.0507%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">1.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.13 15:18 - 2018.04.13 15:20</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 2.18</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.4443%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">2.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.17 07:48 - 2018.04.17 07:57</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 3.02</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.6360%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">3.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.18 10:51 - 2018.04.18 10:53</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.31</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0639%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">4.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.19 16:36 - 2018.04.19 16:36</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.31</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0727%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">5.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.20 10:30 - 2018.04.20 10:35</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 5.33</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">1.0782%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">6.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.24 17:24 - 2018.04.24 17:24</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.12</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0355%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">7.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.25 16:43 - 2018.04.25 16:43</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.11</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0156%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">8.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.26 15:51 - 2018.04.26 15:59</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.18</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.0366%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">9.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.27 09:57 - 2018.04.27 10:00</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.31</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0892%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">10.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.01 11:58 - 2018.05.01 11:58</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.28</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.0570%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">11.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.03 14:51 - 2018.05.03 14:52</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 2.75</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.5339%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">12.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.04 17:09 - 2018.05.04 17:09</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.29</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.0546%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">13.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.07 07:05 - 2018.05.07 07:15</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.70</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.0475%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">14.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.08 13:54 - 2018.05.08 13:56</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -7.01</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-1.3200%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
 </div>
 </div>
  </body>
