--- a/NQ100/NQ100_H1_TSQ.htm
+++ b/NQ100/NQ100_H1_TSQ.htm
@@ -23,16 +23,386 @@ google.charts.setOnLoadCallback(drawHoursChart);
 google.charts.setOnLoadCallback(drawScatterChart);
 
 // ================================ /Load charts ================================
-      </script>
+ // ================================ Hozam chart ================================
+function drawHozamChart() {
+var data = google.visualization.arrayToDataTable([
+['Dátum', 'Hozam', 'Longs', 'Shorts'],
+['', 0, 0, 0]
+,
+['2018.05.15 16:33', -0.40, -0.40, 0.00],
+['2018.05.17 20:42', -5.14, -5.14, 0.00],
+['2018.06.07 17:34', -9.88, -9.88, 0.00],
+['2018.06.14 18:00', -9.90, -9.90, 0.00],
+['2018.06.14 21:40', -0.36, -0.36, 0.00],
+['2018.06.28 18:39', -0.40, -0.36, -0.04],
+['2018.07.13 11:13', 11.61, 11.65, -0.04],
+['2018.07.18 11:40', 11.51, 11.55, -0.04],
+['2018.08.30 04:30', 16.51, 16.55, -0.04],
+['2018.08.30 21:58', 11.74, 11.78, -0.04],
+['2018.09.04 16:35', 6.69, 6.73, -0.04],
+['2018.09.11 05:30', 1.87, 6.73, -4.86]
+]);
+
+var options = {
+seriesType: 'bars',
+series: {
+1: {
+type: 'line'
+},
+2: {
+type: 'line'
+}
+},
+colors: ['#878787', '#0050b8', '#b80000'],
+dataOpacity: 0.5,
+bar: {groupWidth: "100%"},legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Hozam_chart'));
+chart.draw(data, options);
+}
+// ================================ /Hozam chart ================================
+ // ================================ Lots chart ================================
+function drawLotsChart() {
+var data = google.visualization.arrayToDataTable([
+['date', 'lots'],
+['', 0]
+,
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#FF66FF'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 28,
+top: 10,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Lots_chart'));
+chart.draw(data, options);
+}
+// ================================ /Lots chart ================================
+ // ================================ Days chart ================================
+function drawDaysChart() {
+var data = google.visualization.arrayToDataTable([
+['nap', 'profit'],['hétfő', -4.82],
+['kedd', 9.44],
+['szerda', 11.83],
+['csütörtök', -9.53],
+['péntek', -5.05],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#FF66FF'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('days-chart'));
+chart.draw(data, options);
+}
+// ================================ /Days chart ================================
+ // ================================ Hours chart ================================
+function drawHoursChart() {
+var data = google.visualization.arrayToDataTable([
+['óra', 'profit'],
+['0', 0],
+['1', 0.00],
+['2', 0.00],
+['3', 0.00],
+['4', 0.00],
+['5', 0.00],
+['6', 0.00],
+['7', 0.00],
+['8', 0.00],
+['9', 0.00],
+['10', 0.00],
+['11', 0.00],
+['12', 0.00],
+['13', 0.00],
+['14', 0.00],
+['15', 0.00],
+['16', 0.00],
+['17', 14.52],
+['18', -2.60],
+['19', 0.00],
+['20', -4.87],
+['21', -0.44],
+['22', -4.74],
+['23', 0.00],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#FF66FF'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('hours-chart'));
+chart.draw(data, options);
+}
+// ================================ /Hours chart ================================
+
+ // ================================ Scatter chart ================================
+function drawScatterChart() {
+var data = google.visualization.arrayToDataTable([
+['age', 'profit'],
+[139, -0.40],
+[2, -4.74],
+[19, -4.74],
+[1, -0.02],
+[52, 9.54],
+[21, -0.04],
+[41, 12.01],
+[15, -0.10],
+[11, 5.00],
+[1, -4.77],
+[94, -5.05],
+[11, -4.82],
+]);
+
+var options = {
+colors: ['#FF66FF'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 40,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ScatterChart(document.getElementById('scatter-chart'));
+
+chart.draw(data, options);
+}
+// ================================ /Scatter chart ================================
+ </script>
 </head>
 
 <body>
 
  <div class="symstrat-container">
-<div class="sym-navbar">
-<a class="sym-navitem sym-navlink symbol" class="1" href=" nq100.html">nq100</a>
-<a class="sym-navitem sym-navlink strategy" class="TSQ" href="#">60 TSQ</a>
-<a class="sym-navitem sym-navlink" href="../Mastrlist.html">Mesterlista</a>
+<div class="sym-navbar" style="background-color: #878787">
+<a class="sym-navitem symbol NQ100" href="NQ100.htm">NQ100</a>
+<a class="sym-navitem strategy TSQ" href="#">H1 TSQ</a>
+<a class="sym-navitem sym-navlink" href="../instruments.htm">Instrumentumok</a>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_TSQ.htm">H1_TSQ</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_St4.htm">H1_St4</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Classic.htm">H1_Classic</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Zoom.htm">H1_Zoom</a>
+<a class="sym-navitem sym-navlink" href="NQ100_H1_Batman.htm">H1_Batman</a>
+<a class="sym-navitem sym-navlink" href="NQ100_M15_ADX.htm">M15_ADX</a>
+</div>
+<div class="charts-container">
+<div class="stat-wrapper">
+<div class="stat-kat">Kor:</div>
+<div class="stat-val">0 nap</div>
+<div class="stat-kat">Trades:</div>
+<div class="stat-val">12 db</div>
+<div class="stat-kat">Profit total: $ </div>
+<div class="stat-val">1.87</div>
+<div class="stat-kat">Profit%:</div>
+<div class="stat-val">0.3402%</div>
+<div class="stat-kat">Profit factor:</div>
+<div class="stat-val">0.00</div>
+<div class="stat-kat">RR arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Találati arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Átlag nyerő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag vesztő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag trédhossz:</div>
+<div class="stat-val">0 óra</div>
+</div>
+<div class="side-charts">
+<div id="days-chart"></div>
+<div id="hours-chart"></div>
+<div id="scatter-chart"></div>
+</div>
+<div class="main-charts">
+<div id="Hozam_chart"></div>
+<div id="Lots_chart"></div>
+</div>
+
+</div><div class="symstrat-tabla">
+<div class="tabla-head" style="background-color: #878787">
+<div class="symstat-tabla-oszlop tabla-nr">Nr</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">tól -ig</div>
+<div class="symstat-tabla-oszlop tabla-hossz">tréd hossz</div>
+<div class="symstat-tabla-oszlop tabla-xit">kilépés</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">profit $</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">profit %</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes">megjegyzés</div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">0.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.09 21:00 - 2018.05.15 16:33</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 139 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -0.40</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.0763%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">1.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.17 18:00 - 2018.05.17 20:42</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 2 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.74</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.8758%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">2.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.06.06 22:00 - 2018.06.07 17:34</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 19 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.74</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.8743%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">3.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.06.14 17:00 - 2018.06.14 18:00</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 1 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -0.02</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.0038%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">4.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.06.12 17:00 - 2018.06.14 21:40</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 52 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 9.54</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">1.8206%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">5.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.06.27 21:00 - 2018.06.28 18:39</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 21 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -0.04</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.0074%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">6.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.11 18:00 - 2018.07.13 11:13</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 41 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 12.01</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">2.1608%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">7.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.17 20:00 - 2018.07.18 11:40</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 15 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -0.10</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.0181%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">8.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.29 17:00 - 2018.08.30 04:30</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 11 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 5.00</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.9075%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">9.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.30 20:00 - 2018.08.30 21:58</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 1 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.77</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.8580%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">10.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.31 18:00 - 2018.09.04 16:35</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 94 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -5.05</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.9163%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">11.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.09.10 18:00 - 2018.09.11 05:30</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 11 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.82</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.9187%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
 </div>
 </div>
  </body>
