--- a/SP500/SP500_H1_ADX.htm
+++ b/SP500/SP500_H1_ADX.htm
@@ -23,16 +23,398 @@ google.charts.setOnLoadCallback(drawHoursChart);
 google.charts.setOnLoadCallback(drawScatterChart);
 
 // ================================ /Load charts ================================
-      </script>
+ // ================================ Hozam chart ================================
+function drawHozamChart() {
+var data = google.visualization.arrayToDataTable([
+['Dátum', 'Hozam', 'Longs', 'Shorts'],
+['', 0, 0, 0]
+,
+['2018.05.15 15:55', 2.91, 2.91, 0.00],
+['2018.05.15 15:55', 6.89, 6.89, 0.00],
+['2018.05.15 15:55', 8.82, 8.82, 0.00],
+['2018.07.11 04:00', 8.88, 8.88, 0.00],
+['2018.07.11 04:15', 7.22, 7.22, 0.00],
+['2018.07.20 04:35', 5.50, 5.50, 0.00],
+['2018.07.27 19:36', 10.01, 10.01, 0.00],
+['2018.07.27 19:36', 10.99, 10.99, 0.00],
+['2018.08.10 16:02', 12.06, 12.06, 0.00],
+['2018.08.10 17:05', 9.27, 9.27, 0.00],
+['2018.08.15 17:02', 5.07, 5.07, 0.00],
+['2018.08.28 19:01', 3.99, 3.99, 0.00],
+['2018.09.04 16:40', 2.01, 2.01, 0.00]
+]);
+
+var options = {
+seriesType: 'bars',
+series: {
+1: {
+type: 'line'
+},
+2: {
+type: 'line'
+}
+},
+colors: ['#878787', '#0050b8', '#b80000'],
+dataOpacity: 0.5,
+bar: {groupWidth: "100%"},legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Hozam_chart'));
+chart.draw(data, options);
+}
+// ================================ /Hozam chart ================================
+ // ================================ Lots chart ================================
+function drawLotsChart() {
+var data = google.visualization.arrayToDataTable([
+['date', 'lots'],
+['', 0]
+,
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+['', 0.10],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 28,
+top: 10,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Lots_chart'));
+chart.draw(data, options);
+}
+// ================================ /Lots chart ================================
+ // ================================ Days chart ================================
+function drawDaysChart() {
+var data = google.visualization.arrayToDataTable([
+['nap', 'profit'],['hétfő', -1.35],
+['kedd', -0.54],
+['szerda', 2.86],
+['csütörtök', 0.00],
+['péntek', 1.04],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('days-chart'));
+chart.draw(data, options);
+}
+// ================================ /Days chart ================================
+ // ================================ Hours chart ================================
+function drawHoursChart() {
+var data = google.visualization.arrayToDataTable([
+['óra', 'profit'],
+['0', 0],
+['1', 0.00],
+['2', 0.00],
+['3', 0.00],
+['4', 4.51],
+['5', 3.98],
+['6', 0.00],
+['7', 0.98],
+['8', 0.00],
+['9', 0.00],
+['10', 0.00],
+['11', 0.12],
+['12', 0.06],
+['13', 0.00],
+['14', 0.00],
+['15', 1.07],
+['16', -1.08],
+['17', -1.98],
+['18', -1.66],
+['19', -3.99],
+['20', 0.00],
+['21', 0.00],
+['22', 0.00],
+['23', 0.00],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('hours-chart'));
+chart.draw(data, options);
+}
+// ================================ /Hours chart ================================
+
+ // ================================ Scatter chart ================================
+function drawScatterChart() {
+var data = google.visualization.arrayToDataTable([
+['age', 'profit'],
+[148, 2.91],
+[178, 3.98],
+[140, 1.93],
+[447, 0.06],
+[33, -1.66],
+[57, -1.72],
+[447, 4.51],
+[348, 0.98],
+[408, 1.07],
+[77, -2.79],
+[213, -4.20],
+[2, -1.08],
+[142, -1.98],
+]);
+
+var options = {
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 40,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ScatterChart(document.getElementById('scatter-chart'));
+
+chart.draw(data, options);
+}
+// ================================ /Scatter chart ================================
+ </script>
 </head>
 
 <body>
 
  <div class="symstrat-container">
-<div class="sym-navbar">
-<a class="sym-navitem sym-navlink symbol" class="1" href=" sp500.html">sp500</a>
-<a class="sym-navitem sym-navlink strategy" class="ADX" href="#">60 ADX</a>
-<a class="sym-navitem sym-navlink" href="../Mastrlist.html">Mesterlista</a>
+<div class="sym-navbar" style="background-color: #878787">
+<a class="sym-navitem symbol SP500" href="SP500.htm">SP500</a>
+<a class="sym-navitem strategy ADX" href="#">H1 ADX</a>
+<a class="sym-navitem sym-navlink" href="../instruments.htm">Instrumentumok</a>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<a class="sym-navitem sym-navlink" href="SP500_H1_Batman.htm">H1_Batman</a>
+<a class="sym-navitem sym-navlink" href="SP500_H1_ADX.htm">H1_ADX</a>
+<a class="sym-navitem sym-navlink" href="SP500_M15_Zoom.htm">M15_Zoom</a>
+<a class="sym-navitem sym-navlink" href="SP500_M5_ADX.htm">M5_ADX</a>
+</div>
+<div class="charts-container">
+<div class="stat-wrapper">
+<div class="stat-kat">Kor:</div>
+<div class="stat-val">0 nap</div>
+<div class="stat-kat">Trades:</div>
+<div class="stat-val">13 db</div>
+<div class="stat-kat">Profit total: $ </div>
+<div class="stat-val">2.01</div>
+<div class="stat-kat">Profit%:</div>
+<div class="stat-val">0.4576%</div>
+<div class="stat-kat">Profit factor:</div>
+<div class="stat-val">0.00</div>
+<div class="stat-kat">RR arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Találati arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Átlag nyerő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag vesztő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag trédhossz:</div>
+<div class="stat-val">0 óra</div>
+</div>
+<div class="side-charts">
+<div id="days-chart"></div>
+<div id="hours-chart"></div>
+<div id="scatter-chart"></div>
+</div>
+<div class="main-charts">
+<div id="Hozam_chart"></div>
+<div id="Lots_chart"></div>
+</div>
+
+</div><div class="symstrat-tabla">
+<div class="tabla-head" style="background-color: #878787">
+<div class="symstat-tabla-oszlop tabla-nr">Nr</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">tól -ig</div>
+<div class="symstat-tabla-oszlop tabla-hossz">tréd hossz</div>
+<div class="symstat-tabla-oszlop tabla-xit">kilépés</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">profit $</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">profit %</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes">megjegyzés</div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">0.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.09 11:47 - 2018.05.15 15:55</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 148 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 2.91</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.5552%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">1.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.08 05:00 - 2018.05.15 15:55</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 178 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 3.98</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.7495%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">2.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.09 19:48 - 2018.05.15 15:55</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 140 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 1.93</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.3682%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">3.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.06.22 12:17 - 2018.07.11 04:00</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 447 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.06</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.0115%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">4.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.09 18:20 - 2018.07.11 04:15</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 33 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -1.66</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.3194%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">5.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.17 19:22 - 2018.07.20 04:35</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 57 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -1.72</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.3118%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">6.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.09 04:15 - 2018.07.27 19:36</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 447 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 4.51</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.8677%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">7.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.13 07:26 - 2018.07.27 19:36</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 348 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 0.98</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.1771%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">8.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.07.24 15:06 - 2018.08.10 16:02</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 408 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 1.07</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.1952%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">9.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.07 11:50 - 2018.08.10 17:05</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 77 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -2.79</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.4994%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">10.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.06 19:12 - 2018.08.15 17:02</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 213 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.20</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.7767%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">11.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.28 16:03 - 2018.08.28 19:01</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 2 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -1.08</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.2001%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">12.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.08.29 17:41 - 2018.09.04 16:40</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 142 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_3[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -1.98</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.3594%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
 </div>
 </div>
  </body>
