--- a/SP500/SP500_M5_ADX.htm
+++ b/SP500/SP500_M5_ADX.htm
@@ -23,16 +23,302 @@ google.charts.setOnLoadCallback(drawHoursChart);
 google.charts.setOnLoadCallback(drawScatterChart);
 
 // ================================ /Load charts ================================
-      </script>
+ // ================================ Hozam chart ================================
+function drawHozamChart() {
+var data = google.visualization.arrayToDataTable([
+['Dátum', 'Hozam', 'Longs', 'Shorts'],
+['', 0, 0, 0]
+,
+['2018.04.24 21:42', 1.86, 0.00, 1.86],
+['2018.04.25 03:30', -2.55, 0.00, -2.55],
+['2018.05.04 22:11', -1.07, 1.48, -2.55],
+['2018.05.04 22:11', 4.28, 6.83, -2.55],
+['2018.05.04 22:11', 6.96, 9.51, -2.55]
+]);
+
+var options = {
+seriesType: 'bars',
+series: {
+1: {
+type: 'line'
+},
+2: {
+type: 'line'
+}
+},
+colors: ['#878787', '#0050b8', '#b80000'],
+dataOpacity: 0.5,
+bar: {groupWidth: "100%"},legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Hozam_chart'));
+chart.draw(data, options);
+}
+// ================================ /Hozam chart ================================
+ // ================================ Lots chart ================================
+function drawLotsChart() {
+var data = google.visualization.arrayToDataTable([
+['date', 'lots'],
+['', 0]
+,
+['', 0.30],
+['', 0.30],
+['', 0.40],
+['', 0.40],
+['', 0.40],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 40,
+bottom: 28,
+top: 10,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('Lots_chart'));
+chart.draw(data, options);
+}
+// ================================ /Lots chart ================================
+ // ================================ Days chart ================================
+function drawDaysChart() {
+var data = google.visualization.arrayToDataTable([
+['nap', 'profit'],['hétfő', 0.00],
+['kedd', -2.55],
+['szerda', 0.00],
+['csütörtök', 0.00],
+['péntek', 9.51],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('days-chart'));
+chart.draw(data, options);
+}
+// ================================ /Days chart ================================
+ // ================================ Hours chart ================================
+function drawHoursChart() {
+var data = google.visualization.arrayToDataTable([
+['óra', 'profit'],
+['0', 0],
+['1', 0.00],
+['2', 0.00],
+['3', 0.00],
+['4', 0.00],
+['5', 0.00],
+['6', 0.00],
+['7', 0.00],
+['8', 0.00],
+['9', 0.00],
+['10', 0.00],
+['11', 0.00],
+['12', 0.00],
+['13', 0.00],
+['14', 0.00],
+['15', 0.00],
+['16', 0.00],
+['17', 0.00],
+['18', 5.35],
+['19', 2.68],
+['20', 1.48],
+['21', -2.55],
+['22', 0.00],
+['23', 0.00],
+]);
+
+var options = {
+seriesType: 'bars',
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 20,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ComboChart(document.getElementById('hours-chart'));
+chart.draw(data, options);
+}
+// ================================ /Hours chart ================================
+
+ // ================================ Scatter chart ================================
+function drawScatterChart() {
+var data = google.visualization.arrayToDataTable([
+['age', 'profit'],
+[0, 1.86],
+[5, -4.41],
+[1, 1.48],
+[3, 5.35],
+[2, 2.68],
+]);
+
+var options = {
+colors: ['#C00000'],
+legend: {
+position: 'none'
+},
+chartArea: {
+left: 40,
+right: 20,
+bottom: 40,
+top: 20,
+width: "100%",
+height: "100%"
+}
+};
+
+var chart = new google.visualization.ScatterChart(document.getElementById('scatter-chart'));
+
+chart.draw(data, options);
+}
+// ================================ /Scatter chart ================================
+ </script>
 </head>
 
 <body>
 
  <div class="symstrat-container">
-<div class="sym-navbar">
-<a class="sym-navitem sym-navlink symbol" class="1" href=" sp500.html">sp500</a>
-<a class="sym-navitem sym-navlink strategy" class="ADX" href="#">5 ADX</a>
-<a class="sym-navitem sym-navlink" href="../Mastrlist.html">Mesterlista</a>
+<div class="sym-navbar" style="background-color: #878787">
+<a class="sym-navitem symbol SP500" href="SP500.htm">SP500</a>
+<a class="sym-navitem strategy ADX" href="#">M5 ADX</a>
+<a class="sym-navitem sym-navlink" href="../instruments.htm">Instrumentumok</a>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<div class="sym-navitem"></div>
+<a class="sym-navitem sym-navlink" href="SP500_H1_Batman.htm">H1_Batman</a>
+<a class="sym-navitem sym-navlink" href="SP500_H1_ADX.htm">H1_ADX</a>
+<a class="sym-navitem sym-navlink" href="SP500_M15_Zoom.htm">M15_Zoom</a>
+<a class="sym-navitem sym-navlink" href="SP500_M5_ADX.htm">M5_ADX</a>
+</div>
+<div class="charts-container">
+<div class="stat-wrapper">
+<div class="stat-kat">Kor:</div>
+<div class="stat-val">0 nap</div>
+<div class="stat-kat">Trades:</div>
+<div class="stat-val">5 db</div>
+<div class="stat-kat">Profit total: $ </div>
+<div class="stat-val">6.96</div>
+<div class="stat-kat">Profit%:</div>
+<div class="stat-val">1.2751%</div>
+<div class="stat-kat">Profit factor:</div>
+<div class="stat-val">0.00</div>
+<div class="stat-kat">RR arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Találati arány:</div>
+<div class="stat-val">0.00%</div>
+<div class="stat-kat">Átlag nyerő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag vesztő:</div>
+<div class="stat-val">$0.00</div>
+<div class="stat-kat">Átlag trédhossz:</div>
+<div class="stat-val">0 óra</div>
+</div>
+<div class="side-charts">
+<div id="days-chart"></div>
+<div id="hours-chart"></div>
+<div id="scatter-chart"></div>
+</div>
+<div class="main-charts">
+<div id="Hozam_chart"></div>
+<div id="Lots_chart"></div>
+</div>
+
+</div><div class="symstrat-tabla">
+<div class="tabla-head" style="background-color: #878787">
+<div class="symstat-tabla-oszlop tabla-nr">Nr</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">tól -ig</div>
+<div class="symstat-tabla-oszlop tabla-hossz">tréd hossz</div>
+<div class="symstat-tabla-oszlop tabla-xit">kilépés</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">profit $</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">profit %</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes">megjegyzés</div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">0.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.24 21:25 - 2018.04.24 21:42</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 0 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 1.86</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.3762%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">1.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.04.24 21:45 - 2018.04.25 03:30</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 5 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ -4.41</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">-0.8919%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">2.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.04 20:50 - 2018.05.04 22:11</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 1 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 1.48</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.2787%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor elsosor">
+<div class="symstat-tabla-oszlop tabla-nr">3.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.04 18:55 - 2018.05.04 22:11</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 3 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_1[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 5.35</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">1.0074%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
+<div class="symstrat-tabla-sor masodiksor">
+<div class="symstat-tabla-oszlop tabla-nr">4.</div>
+<div class="symstat-tabla-oszlop tabla-tol-ig">2018.05.04 19:45 - 2018.05.04 22:11</div>
+<div class="symstat-tabla-oszlop tabla-hossz"> 2 óra</div>
+<div class="symstat-tabla-oszlop tabla-xit">_2[sl]</div>
+<div class="symstat-tabla-oszlop tabla-profit-dollar">$ 2.68</div>
+<div class="symstat-tabla-oszlop tabla-profit-percent">0.5047%</div>
+<div class="symstat-tabla-oszlop tabla-megjegyzes"></div>
+</div>
 </div>
 </div>
  </body>
